--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "express": "^4.21.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
-    "next": "14.1.0",
+    "next": "^15.1.3",
     "next-themes": "^0.2.1",
     "pg": "^8.13.1",
-    "react": "^18",
+    "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
