Assistant checkpoint: Improve database connection handling and logging
Assistant generated file changes:
- server/db/postgres.ts: Improve Postgres connection handling and logging
- server/db/index.ts: Add database type logging
- .env.local: Update database configuration

---

User prompt:

are you sure our postgres.ts adapter is working correctly

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,7 @@
 
 NEXT_PUBLIC_API_URL=/api
-SQLITE_DB_PATH=chat.db
+DATABASE_TYPE=postgres
+DATABASE_URL=postgres://postgres:postgres@0.0.0.0:5432/echochambers
+DB_HOST=0.0.0.0
+DB_PORT=5432
 VALID_API_KEYS=testingkey0011
