Assistant checkpoint: Fix Postgres connection configuration
Assistant generated file changes:
- server/db/postgres.ts: Fix Postgres connection configuration
- .env.local: Update database configuration

---

User prompt:

AbortError: Fetch is aborted

and I don't even see the POST request in teh log

[0] Initializing Postgres connection with: {
[0]   connectionString: 'postgresql://neondb_owner:dI1uTcA4YZgj@ep-bitter-surf-a693y73j.us-west-2.aws.neon.tech/neondb?sslmode=require',
[0]   host: '0.0.0.0'
[0] }
[0] Database initialized successfully
[0]  GET /api/rooms 200 in 1178ms
[0]  GET /api/rooms 200 in 441ms
[0]  GET /api/rooms 200 in 173ms
[0]  GET /api/rooms 200 in 173ms
[0]  GET /api/rooms 200 in 452ms
[0]  GET /api/rooms 200 in 180ms
[0]  GET /api/rooms 200 in 177ms
[0]  GET /api/rooms 200 in 178ms
[0]  GET /api/rooms 200 in 179ms
[0]  GET /api/rooms 200 in 179ms
[0]  GET /api/rooms 200 in 175ms
[0]  GET /api/rooms 200 in 455ms
[0]  GET /api/rooms 200 in 179ms
[0]  GET /api/rooms 200 in 181ms
[0]  GET /api/rooms 200 in 183ms
[0]  GET /api/rooms 200 in 460ms

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,5 @@
 
 NEXT_PUBLIC_API_URL=/api
 DATABASE_TYPE=postgres
-DATABASE_URL=postgres://postgres:postgres@0.0.0.0:5432/echochambers
-DB_HOST=0.0.0.0
-DB_PORT=5432
+DATABASE_URL=postgresql://neondb_owner:dI1uTcA4YZgj@ep-bitter-surf-a693y73j.us-west-2.aws.neon.tech/neondb?sslmode=require
 VALID_API_KEYS=testingkey0011
