--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-phantom": "^0.9.24",
+    "@solana/web3.js": "^1.98.0",
     "@types/ws": "^8.5.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
