--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tweetnacl-util": "^0.15.1",
     "vaul": "^1.1.2",
     "ws": "^8.18.0",
     "zod": "^3.24.1"
