Assistant checkpoint: Add wallet signature verification
Assistant generated file changes:
- app/api/auth/verify/route.ts: Add signature verification

---

User prompt:

can we actually validate that it was signed by a known wallet

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "vaul": "^1.1.2",
     "ws": "^8.18.0",
