--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"next dev\" \"ts-node --project tsconfig.server.json server/index.ts\"",
-    "build": "next build",
+    "build": "tsc --project tsconfig.server.json && next build",
     "start": "next start",
     "lint": "next lint"
   },
